# LinuxCourseCodePub

./: README.md  index.md
bash/: backup.sh  hello.sh  hello_with_args.sh  nudnik.sh
compilation/: CMakeLists.txt  Makefile  Makefile_withlib  README.md  main.c
compilation/lib/: utils.c  utils.h
docker/: Dockerfile.build  Dockerfile.prod  build.sh
docker/app/: .main.cpp.swp  Makefile  main.c
docker/app/header/: util_zip.h
docker/app/src/: util_zip.c
ipc/: mq_ipc.c
ipc/execv/: mq_ipc_vfork_include.h  mq_ipc_vfork_parent.c  mq_ipc_vfork_reader.c  mq_ipc_vfork_writer.c
mta_crypt_lib/: Makefile  README.md  mta-utils-dev-aarch64.deb  mta-utils-dev-x86_64.deb  mta-utils-dev.deb  mta_crypt.c  mta_crypt.h  mta_rand.c  mta_rand.h  test_encrypt.c
mta_crypt_lib/mta-utils-dev/DEBIAN/: changelog  control
processes/: dup2.cpp  execv.cpp  fork.cpp  pipe.cpp  piperw.cpp  piperwp.cpp  readnonblock.cpp  signals.cpp  waitpid.cpp
syslog/: syslog_example.c
threads/: Makefile  threads_basic.c  threads_with_attr.c
threads/deadlock/: threads_deadlock.c
threads/producer_consumer/: producer_bug.c  producer_bug_busywait.c  producer_withbroadcast.c  producer_withbroadcast_andtimeout.c  producer_withsignal.c
threads/reader_writer/: mq.c  mq_withoverflow.c  mq_withoverflow_nonblock.c  rwlock.c
